--- a/OSMTracker/View/MainPage.xaml
+++ b/OSMTracker/View/MainPage.xaml
@@ -27,7 +27,7 @@
           >
  
         <!--Panorama 控件-->
-        <controls:Panorama Title="{Binding Path=LocalizedResources.ApplicationTitle, Source={StaticResource LocalizedStrings}}" SelectionChanged="Panorama_SelectionChanged">
+        <controls:Panorama Title="{Binding Path=LocalizedResources.ApplicationTitle, Source={StaticResource LocalizedStrings}}" Foreground="White" SelectionChanged="Panorama_SelectionChanged">
             <controls:Panorama.Background>
                 <ImageBrush ImageSource="/View/PanoramaBackground.png" />
             </controls:Panorama.Background>
@@ -74,8 +74,8 @@
                                 <!--用图像替换矩形-->
                                 <Image Height="100" Width="100" Source="/Images/appbar.map.treasure.png" Margin="9,0,9,0"/>
                                 <StackPanel Width="311">                                    
-                                    <TextBlock Text="{Binding Name}" TextWrapping="Wrap" Margin="12,6,12,0" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                                    <TextBlock Text="{Binding LineTwo}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
+                                    <TextBlock Text="{Binding Name}" TextWrapping="Wrap" Margin="12,6,12,0" Style="{StaticResource PhoneTextExtraLargeStyle}" Foreground="White"/>
+                                    <TextBlock Text="{Binding LineTwo}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}" Foreground="White"/>
                                 </StackPanel>
                             </StackPanel>
                         </DataTemplate>
